# beads_rust

./: .gitignore  AGENTS.md  AGENT_FRIENDLINESS_REPORT.md  CHANGELOG_AGENT_FRIENDLY.md  CLI_SCHEMA.json  Cargo.toml  EXISTING_BEADS_STRUCTURE_AND_ARCHITECTURE.md  README.md  ROBOT_MODE_EXAMPLES.jsonl  UPGRADE_LOG.md  build-install.sh  install.sh  test_fmt.rs
.beads/: .gitignore  config.yaml  interactions.jsonl  issues.jsonl
.beads/.br_history/: issues.20260117_023942.jsonl  issues.20260117_033743.jsonl  issues.20260117_034616.jsonl  issues.20260117_035254.jsonl
.cargo/: audit.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  release.yml
.github/workflows.disabled/: audit.yml  ci.yml  conformance.yml  e2e-full.yml  notify-acfs.yml  release.yml  update-package-manifests.yml
.ntm/pids/: bd-beads_rust.pid  cm-beads_rust.pid
agent_baseline/: README_first_80_lines.md
agent_baseline/errors/: show_not_found.json
agent_baseline/examples/: list_limit3.json  list_limit3.toon  ready.json  ready.toon  show_one.json  show_one.toon  version.json
agent_baseline/help/: br_help.txt  br_list_help.txt  br_schema_help.txt
agent_baseline/schemas/: schema_all.json  schema_error.json  schema_issue_details.json
benches/: storage_perf.rs
docs/: AGENT_INTEGRATION.md  ARCHITECTURE.md  ARTIFACT_LOG_SCHEMA.md  CLI_REFERENCE.md  E2E_COVERAGE_MATRIX.md  INSTALLING.md  SYNC_SAFETY.md  TROUBLESHOOTING.md
docs/agent/: AGENTS.md  ERRORS.md  EXAMPLES.md  QUICKSTART.md  ROBOT_MODE.md  SCHEMA.md
packaging/aur/: PKGBUILD
packaging/homebrew/: br.rb
packaging/scoop/: br.json
scripts/: agent_smoke_test.sh  bench.sh  build-release.sh  ci-local.sh  conformance.sh  e2e.sh  e2e_full.sh  generate-report.sh  generate_json_baseline.sh
src/: main.rs
src/cli/: mod.rs
src/cli/commands/: agents.rs  audit.rs  blocked.rs  changelog.rs  close.rs  comments.rs  completions.rs  config.rs  count.rs  create.rs  defer.rs  delete.rs  dep.rs  doctor.rs  epic.rs  graph.rs  history.rs  info.rs  init.rs  label.rs  lint.rs  list.rs  mod.rs  orphans.rs  q.rs  query.rs  ready.rs  reopen.rs  search.rs  show.rs  stale.rs  stats.rs  sync.rs  update.rs  upgrade.rs  version.rs  where.rs
src/config/: mod.rs  routing.rs
src/error/: mod.rs  structured.rs
src/format/: csv.rs  mod.rs  output.rs  text.rs
src/model/: mod.rs
src/output/: context.rs  mod.rs  theme.rs
src/output/components/: dep_tree.rs  issue_panel.rs  issue_table.rs  progress.rs
src/storage/: events.rs  schema.rs  sqlite.rs
src/sync/: history.rs  mod.rs  path.rs
src/util/: hash.rs  id.rs  markdown_import.rs  mod.rs  progress.rs  time.rs
src/validation/: mod.rs
tests/: bench_cold_warm.rs  bench_cold_warm_start.rs  bench_real_datasets.rs  bench_synthetic_scale.rs  benchmark_comparison.rs  benchmark_datasets.rs  conformance.rs  conformance_edge_cases.rs  conformance_labels_comments.rs  conformance_schema.rs  conformance_text_output.rs  conformance_workflows.rs  debug_sync_status.rs  e2e_audit.rs  e2e_basic_lifecycle.rs  e2e_changelog.rs  e2e_cold_warm_benchmarks.rs  e2e_comments.rs  e2e_comments_stdin.rs  e2e_completions.rs  e2e_concurrency.rs  e2e_config_precedence.rs  e2e_create_output.rs  e2e_defer.rs  e2e_env_overrides.rs  e2e_epic.rs  e2e_errors.rs  e2e_git_safety_full_cli.rs  e2e_global_flags.rs  e2e_graph.rs  e2e_graph_ordering.rs  e2e_harness_demo.rs  e2e_history.rs  e2e_history_custom_path.rs  e2e_history_restore_prune.rs  e2e_labels.rs  e2e_lint.rs  e2e_list_comprehensive.rs  e2e_list_priority.rs  e2e_list_scenarios.rs  (+45 more)
tests/common/: artifact_validator.rs  baseline.rs  binary_discovery.rs  cli.rs  dataset_registry.rs  fixtures.rs  harness.rs  mod.rs  report_indexer.rs  scenarios.rs
tests/e2e/: test_json_compat.sh  test_rich_output.sh
tests/snapshots/: cli_output.rs  error_messages.rs  json_output.rs  jsonl_format.rs  mod.rs
tests/snapshots/snapshots/: snapshots__snapshots__cli_output__blocked_output.snap  snapshots__snapshots__cli_output__count_output.snap  snapshots__snapshots__cli_output__create_help.snap  snapshots__snapshots__cli_output__doctor_output.snap  snapshots__snapshots__cli_output__help_output.snap  snapshots__snapshots__cli_output__info_no_beads_dir.snap.new  snapshots__snapshots__cli_output__info_output.snap  snapshots__snapshots__cli_output__info_with_schema.snap  snapshots__snapshots__cli_output__label_list_output.snap  snapshots__snapshots__cli_output__label_list_output.snap.new  snapshots__snapshots__cli_output__list_empty.snap  snapshots__snapshots__cli_output__list_with_issues.snap  snapshots__snapshots__cli_output__ready_output.snap  snapshots__snapshots__cli_output__reopen_output.snap  snapshots__snapshots__cli_output__search_output.snap  snapshots__snapshots__cli_output__show_output.snap  snapshots__snapshots__cli_output__stats_output.snap  snapshots__snapshots__cli_output__version_output.snap  snapshots__snapshots__cli_output__where_no_beads_dir.snap  snapshots__snapshots__cli_output__where_no_beads_dir.snap.new  snapshots__snapshots__cli_output__where_output.snap  snapshots__snapshots__error_messages__error_dependency_cycle.snap  snapshots__snapshots__error_messages__error_invalid_priority.snap  snapshots__snapshots__error_messages__error_invalid_status.snap  snapshots__snapshots__error_messages__error_issue_not_found.snap  snapshots__snapshots__error_messages__error_not_initialized.snap  snapshots__snapshots__error_messages__error_self_dependency.snap  snapshots__snapshots__error_messages__update_closed_issue.snap  snapshots__snapshots__json_output__blocked_json_output.snap  snapshots__snapshots__json_output__close_json_output.snap  snapshots__snapshots__json_output__create_json_output.snap  snapshots__snapshots__json_output__dep_list_json_output.snap  snapshots__snapshots__json_output__info_error_json_output.snap  snapshots__snapshots__json_output__info_json_output.snap  snapshots__snapshots__json_output__info_schema_json_output.snap  snapshots__snapshots__json_output__list_filtered_json_output.snap  snapshots__snapshots__json_output__list_json_output.snap  (+7 more)
