[package]
name = "beads_rust"
version = "0.1.13"
edition = "2024"
rust-version = "1.85"
description = "Agent-first issue tracker (SQLite + JSONL)"
license = "MIT"
repository = "https://github.com/Dicklesworthstone/beads_rust"
keywords = ["cli", "issue-tracker", "sqlite", "agent"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "br"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env", "unstable-ext"] }
clap_complete = { version = "4.5", features = ["unstable-dynamic"] }

# Database
rusqlite = { version = "0.38", features = ["bundled", "modern_sqlite", "fallible_uint"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
schemars = { version = "0.8", features = ["derive", "chrono"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Hashing
sha2 = "0.10"

# Error handling
anyhow = "1.0"
thiserror = "2.0.18"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# Terminal
indicatif = "0.18"
crossterm = "0.28"

# Rich terminal output (sibling project)
# Pinned to commit with let_chains fix for Rust 1.88+ compatibility
rich_rust = { git = "https://github.com/Dicklesworthstone/rich_rust.git", rev = "dd3dcdb", features = ["full"] }

# TOON format support (sibling project)
toon_rust = { git = "https://github.com/Dicklesworthstone/toon_rust.git", rev = "788589d" }

# Utilities
once_cell = "1.19"
regex = "1.11"
unicode-width = "0.2"

# Versioning
semver = "1.0"

# Self-update (optional; gated behind the `self_update` feature)
self_update = { version = "0.42", features = ["rustls", "signatures"], default-features = false, optional = true }

[build-dependencies]
vergen-gix = { version = "9.1", features = ["build", "cargo", "rustc"] }

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"
criterion = { version = "0.8", features = ["html_reports"] }
walkdir = "2.4"
insta = { version = "1.38", features = ["json", "yaml"] }
proptest = "1.6"
rand = "0.9.2"

[[bench]]
name = "benchmarks"
path = "benches/storage_perf.rs"
harness = false

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1

[features]
default = ["self_update"]
self_update = ["dep:self_update"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
# Allow these lints to unblock CI (need higher priority than groups)
cast_precision_loss = { level = "allow", priority = 1 }
doc_markdown = { level = "allow", priority = 1 }
missing_const_for_fn = { level = "allow", priority = 1 }
uninlined_format_args = { level = "allow", priority = 1 }
useless_let_if_seq = { level = "allow", priority = 1 }
format_push_string = { level = "allow", priority = 1 }
